// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthCheck table tests render table 1`] = `
<div>
  <table
    class="bp3-html-table bp3-interactive healthCheckTable"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          PATH
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TIMEOUT(SECS)
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          STATUS (from-to)
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="http"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="/"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="80"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="30"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="200-299"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`HealthCheck table tests update table values 1`] = `
<div>
  <table
    class="bp3-html-table bp3-interactive healthCheckTable"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          PATH
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TIMEOUT(SECS)
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          STATUS (from-to)
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="https"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="/random"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="81"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="60"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="200-399"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
